[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/stuck.gd" type="Script" id=1]
[ext_resource path="res://scenes/select_ring.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/mainmenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/startscreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levelend.tscn" type="PackedScene" id=6]

[node name="StUck" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 401.095, 424.119 )

[node name="SelectRing" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -0.471939, 0 )

[node name="MainMenu" parent="." instance=ExtResource( 4 )]

[node name="StartScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="NextLevelScreen" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="level_complete" from="Player" to="." method="_on_Player_level_complete"]
